# rcli

./: Cargo.toml  output.csv  test.rest  tmp.txt
assets/: b64.txt
examples/: chacha20plot1305.rs  chacha20ploy1305.rs  jwt.rs
fixtures/: blake3.txt  chacha20ploy1305.key  ed25519.pk  ed25519.sk
src/: csv.rs  lib.rs  main.rs  opts.rs  utils.rs
src/cli/: b64.rs  base64.rs  csv.rs  csv_convert.rs  gen_pass.rs  genpass.rs  http.rs  http_server.rs  jwt.rs  mod.rs  text.rs
src/process/: b64.rs  csv_convert.rs  gen_pass.rs  http_serve.rs  http_server.rs  jwt_process.rs  mod.rs  text.rs  utils.rs
templates/: index.html
